--- a/projects/pixel/package.json
+++ b/projects/pixel/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "ngx-pixel",
-  "description": "An Angular library to simplify the use of a Facebook Pixel.",
+  "name": "ngx-pixel-eventid",
+  "description": "An Angular library to simplify the use of a Facebook Pixel with support for eventID to fortify Facebook deduplication with ConversionsAPI reports.",
   "author": {
     "name": "Niels Kersic",
     "email": "hi@niels.codes",
     "url": "https://niels.codes"
   },
   "license": "MIT",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NielsKersic/ngx-pixel"
+    "url": "https://github.com/morsagmon/ngx-pixel"
   },
   "keywords": [
     "angular",
